Applied resampling and cropping, added code for resnet model

--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import SimpleITK as sitk"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Image Pre-processing"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +397,7 @@
        "[11 rows x 75 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,209 +412,174 @@
     "\n",
     "df = pd.concat([df_landmark1, df_landmark2, df_landmark3, df_landmark4, df_landmark5], axis=1, \n",
     "                         keys=['Landmark1', 'Landmark2', 'Landmark3', 'Landmark4', 'Landmark5'])\n",
-    "df\n",
-    "# df['Landmark1']"
+    "df # df['Landmark1']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image 100063_ct.nii:\n",
-      "------------------\n",
-      "Size: (587, 587, 3311)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (587, 587, 3311)\n",
-      "Landmark 1: (179, 356, 2132)\n",
-      "Landmark 2: (218, 338, 2107)\n",
-      "Landmark 3: (144, 378, 2113)\n",
-      "Landmark 4: (167, 343, 2124)\n",
-      "Landmark 5: (177, 368, 2177)\n",
-      "\n",
-      "Image 100084_ct.nii:\n",
-      "------------------\n",
-      "Size: (543, 517, 3003)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (543, 517, 3003)\n",
-      "Landmark 1: (181, 310, 1973)\n",
-      "Landmark 2: (226, 276, 1974)\n",
-      "Landmark 3: (140, 309, 1956)\n",
-      "Landmark 4: (174, 274, 1978)\n",
-      "Landmark 5: (176, 302, 2026)\n",
-      "\n",
-      "Image 100114_ct.nii:\n",
-      "------------------\n",
-      "Size: (578, 573, 3194)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (578, 573, 3194)\n",
-      "Landmark 1: (174, 320, 1981)\n",
-      "Landmark 2: (227, 308, 1956)\n",
-      "Landmark 3: (131, 334, 1952)\n",
-      "Landmark 4: (168, 302, 1977)\n",
-      "Landmark 5: (170, 327, 2022)\n",
-      "\n",
-      "Image 100115_ct.nii:\n",
-      "------------------\n",
-      "Size: (550, 596, 3083)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (550, 596, 3083)\n",
-      "Landmark 1: (133, 301, 2024)\n",
-      "Landmark 2: (175, 288, 2007)\n",
-      "Landmark 3: (102, 321, 2002)\n",
-      "Landmark 4: (127, 296, 2020)\n",
-      "Landmark 5: (136, 312, 2066)\n",
-      "\n",
-      "Image 100125_ct.nii:\n",
-      "------------------\n",
-      "Size: (591, 604, 2922)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (591, 604, 2922)\n",
-      "Landmark 1: (247, 359, 1884)\n",
-      "Landmark 2: (301, 349, 1855)\n",
-      "Landmark 3: (194, 378, 1852)\n",
-      "Landmark 4: (239, 339, 1871)\n",
-      "Landmark 5: (249, 369, 1916)\n",
-      "\n",
-      "Image 100131_ct.nii:\n",
-      "------------------\n",
-      "Size: (551, 621, 3053)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (551, 621, 3053)\n",
-      "Landmark 1: (148, 340, 2036)\n",
-      "Landmark 2: (183, 338, 2013)\n",
-      "Landmark 3: (121, 352, 2011)\n",
-      "Landmark 4: (144, 330, 2030)\n",
-      "Landmark 5: (147, 346, 2071)\n",
-      "\n",
-      "Image 100139_ct.nii:\n",
-      "------------------\n",
-      "Size: (564, 559, 3012)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (564, 559, 3012)\n",
-      "Landmark 1: (193, 356, 1880)\n",
-      "Landmark 2: (237, 340, 1877)\n",
-      "Landmark 3: (159, 379, 1856)\n",
-      "Landmark 4: (186, 352, 1874)\n",
-      "Landmark 5: (194, 364, 1919)\n",
-      "\n",
-      "Image 100155_ct.nii:\n",
-      "------------------\n",
-      "Size: (626, 675, 3238)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (626, 675, 3238)\n",
-      "Landmark 1: (240, 390, 2070)\n",
-      "Landmark 2: (279, 382, 2064)\n",
-      "Landmark 3: (205, 400, 2048)\n",
-      "Landmark 4: (235, 373, 2066)\n",
-      "Landmark 5: (242, 395, 2122)\n",
-      "\n",
-      "Image 100164_ct.nii:\n",
-      "------------------\n",
-      "Size: (686, 686, 2853)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (686, 686, 2853)\n",
-      "Landmark 1: (339, 247, 1888)\n",
-      "Landmark 2: (376, 269, 1871)\n",
-      "Landmark 3: (290, 235, 1880)\n",
-      "Landmark 4: (342, 238, 1882)\n",
-      "Landmark 5: (325, 265, 1935)\n",
-      "\n",
-      "Image 100193_ct.nii:\n",
-      "------------------\n",
-      "Size: (546, 543, 3364)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (546, 543, 3364)\n",
-      "Landmark 1: (171, 332, 2161)\n",
-      "Landmark 2: (218, 319, 2130)\n",
-      "Landmark 3: (128, 349, 2123)\n",
-      "Landmark 4: (165, 316, 2148)\n",
-      "Landmark 5: (174, 340, 2189)\n",
-      "\n",
-      "Image 100222_ct.nii:\n",
-      "------------------\n",
-      "Size: (532, 549, 3176)\n",
-      "Intensity (min-max): 0-4000\n",
-      "Mask size: (532, 549, 3176)\n",
-      "Landmark 1: (152, 295, 1986)\n",
-      "Landmark 2: (190, 276, 1976)\n",
-      "Landmark 3: (122, 310, 1955)\n",
-      "Landmark 4: (144, 283, 1980)\n",
-      "Landmark 5: (152, 302, 2025)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img_dir = \"data/train/images\"\n",
+    "class BinaryMask:\n",
+    "\n",
+    "    def create_empty_image(self, image_ref):\n",
+    "        # Create an \"empty\" new image with the same dimensions and pixel type\n",
+    "        \n",
+    "        image = sitk.Image(image_ref.GetSize(), sitk.sitkUInt8)\n",
+    "        image.SetSpacing(image_ref.GetSpacing())\n",
+    "        image.SetOrigin(image_ref.GetOrigin())\n",
+    "        image.SetDirection(image_ref.GetDirection())\n",
+    "\n",
+    "        print(\"---------Mask creation---------\")\n",
+    "        print(f\"Image size: {image_ref.GetSize()}\")\n",
+    "        print(f\"Image mask size: {image.GetSize()}\")\n",
+    "        \n",
+    "        return image\n",
+    "\n",
+    "    def apply_landmarks(self, image, df, image_name):\n",
+    "        # Set voxel value to 1 at each landmark\n",
+    "\n",
+    "        print(\"------Applying landmarks------\")\n",
+    "        for i in range(1, 6):\n",
+    "            landmark_n = 'Landmark' + str(i)\n",
+    "            observer = 'Average' # Average, Amy, Katie, etc\n",
+    "            x = round(df[landmark_n][observer]['X'][image_name])\n",
+    "            y = round(df[landmark_n][observer]['Y'][image_name])\n",
+    "            z = round(df[landmark_n][observer]['Z'][image_name])\n",
+    "            landmark = (x, y, z)\n",
+    "\n",
+    "            print(f\"Landmark {i}: {landmark}\")\n",
+    "            image.SetPixel(landmark, 1) # Set voxel value to 1\n",
+    "\n",
+    "        return image\n",
+    "\n",
+    "    def binary_dilate(self, image):\n",
+    "        # Apply a Binary Dilation filter to make intensity 1 voxels become spheres\n",
+    "\n",
+    "        dilate_filter = sitk.BinaryDilateImageFilter()\n",
+    "        dilate_filter.SetKernelRadius(3)\n",
+    "        dilate_filter.SetKernelType(sitk.sitkBall)\n",
+    "        dilate_filter.SetForegroundValue(1)\n",
+    "        \n",
+    "        dilated_image = dilate_filter.Execute(image)\n",
+    "\n",
+    "        return dilated_image\n",
+    "\n",
+    "\n",
+    "    def execute(self, image, df, image_name):\n",
+    "        \n",
+    "        image_mask = self.create_empty_image(image)\n",
+    "        image_mask_annot = self.apply_landmarks(image_mask, df, image_name)\n",
+    "        image_mask_dilated = self.binary_dilate(image_mask_annot)\n",
+    "        \n",
+    "        return image_mask_dilated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PreProcessing:\n",
+    "\n",
+    "    def resample(self, image):\n",
+    "        # Resample image by normalising spacing\n",
+    "\n",
+    "        original_spacing = image.GetSpacing()\n",
+    "        original_size = image.GetSize()\n",
+    "        new_spacing = [1.0, 1.0, 1.0]\n",
+    "        new_size = [int(sz * spc / new_spc) for sz, spc, new_spc in zip(original_size, original_spacing, new_spacing)]\n",
+    "\n",
+    "        # Create resampling filter\n",
+    "        resampler = sitk.ResampleImageFilter()\n",
+    "        resampler.SetSize(new_size)\n",
+    "        resampler.SetOutputSpacing(new_spacing)\n",
+    "        resampler.SetOutputDirection(image.GetDirection())\n",
+    "        resampler.SetOutputOrigin(image.GetOrigin())\n",
+    "        resampler.SetTransform(sitk.Transform())\n",
+    "\n",
+    "        # Apply resampling filter to image\n",
+    "        image_res = resampler.Execute(image)\n",
+    "\n",
+    "        print(f\"----------Resampling----------\")\n",
+    "        print(f\"Original image size: {image.GetSize()}\")\n",
+    "        print(f\"Resampled image size: {image_res.GetSize()}\")\n",
+    "        print(f\"Original image spacing: {image.GetSpacing()}\")\n",
+    "        print(f\"Resampled image spacing: {image_res.GetSpacing()}\")\n",
+    "        print(f\"Original image origin: {image.GetOrigin()}\")\n",
+    "        print(f\"Resampled image origin: {image_res.GetOrigin()}\")\n",
+    "        \n",
+    "        return image_res\n",
+    "    \n",
+    "    def crop(self, image, crop_size):\n",
+    "        # Crop image to a set size, centered approx. around the knee\n",
+    "\n",
+    "        original_size = image.GetSize()\n",
+    "\n",
+    "        start_index_ = tuple((original_size[i] - crop_size[i]) // 2 for i in range(image.GetDimension()))\n",
+    "\n",
+    "        offset_x = -70\n",
+    "        offset_y = 50\n",
+    "        offset_z = 250\n",
+    "        start_index = (start_index_[0] + offset_x, start_index_[1] + offset_y, start_index_[2] + offset_z)\n",
+    "\n",
+    "        end_index = tuple(start_index[i] + crop_size[i] for i in range(image.GetDimension()))\n",
+    "\n",
+    "        # Get the region of interest using indexing\n",
+    "        cropped_image = image[start_index[0]:end_index[0], start_index[1]:end_index[1], start_index[2]:end_index[2]]\n",
+    "\n",
+    "        print(f\"----------Cropping----------\")\n",
+    "        print(f\"Original image size: {image.GetSize()}\")\n",
+    "        print(f\"Resampled image size: {cropped_image.GetSize()}\")\n",
+    "        print(f\"Original image spacing: {image.GetSpacing()}\")\n",
+    "        print(f\"Resampled image spacing: {cropped_image.GetSpacing()}\")\n",
+    "        print(f\"Original image origin: {image.GetOrigin()}\")\n",
+    "        print(f\"Resampled image origin: {cropped_image.GetOrigin()}\")\n",
+    "\n",
+    "        return cropped_image\n",
+    "    \n",
+    "    # Normalisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### Pre-processing loop\n",
+    "\n",
+    "image_dir = \"data/train/images\"\n",
     "landmarks_path = \"data/train/landmarks.xls\"\n",
     "\n",
-    "# Remove MacOS auto-generated file\n",
-    "file_path = 'data/train/images/.DS_Store'\n",
-    "if os.path.exists(file_path):\n",
-    "    os.remove(file_path)\n",
+    "image_names = [image_name for image_name in sorted(os.listdir(os.path.join(image_dir, \"orig/imag\")))\n",
+    "               if os.path.isfile(os.path.join(image_dir, \"orig/imag\", image_name)) and image_name.endswith('.nii')]\n",
+    "for image_name in image_names:\n",
     "\n",
-    "# Loop through each image in the directory\n",
-    "files = [img_path for img_path in sorted(os.listdir(img_dir)) if os.path.isfile(os.path.join(img_dir, img_path))]\n",
-    "for img_path in files:\n",
+    "    print(f\"Image {image_name}:\")\n",
+    "    print(\"--------------------------------\")\n",
     "\n",
-    "    image = sitk.ReadImage(os.path.join(img_dir, img_path))\n",
+    "    image = sitk.ReadImage(os.path.join(image_dir, \"orig/imag\", image_name))\n",
     "\n",
-    "    # By default, SimpleITK represents images with an axis order of 'XYZ', whereas NumPy uses 'ZYX'\n",
-    "    # Convert all to XYZ\n",
-    "    image_arr = np.transpose(sitk.GetArrayFromImage(image), axes=(2, 1, 0))\n",
-    "    image_size = image.GetSize()\n",
+    "    # Create binary mask based on manually annotated landmarks\n",
+    "    image_mask = BinaryMask().execute(image, df, image_name)\n",
+    "    sitk.WriteImage(image_mask, os.path.join(image_dir, \"orig/mask\", image_name[:-4] + \"_mask.nii\"))\n",
     "\n",
-    "    # # Display image\n",
-    "    # plt.imshow(image_arr[:,:,2100], cmap='gray')\n",
-    "    # plt.show()\n",
-    "\n",
-    "    print(f\"Image {img_path}:\")\n",
-    "    print(\"------------------\")\n",
-    "    print(f\"Size: {image_size}\")\n",
-    "    print(f\"Intensity (min-max): {np.min(image_arr)}-{np.max(image_arr)}\")\n",
-    "\n",
-    "    # Create an \"empty\" new image with the same dimensions and pixel type\n",
-    "    mask = sitk.Image(image.GetSize(), sitk.sitkUInt8)\n",
-    "    mask.SetSpacing(image.GetSpacing())\n",
-    "    mask.SetOrigin(image.GetOrigin())\n",
-    "    mask.SetDirection(image.GetDirection())\n",
-    "\n",
-    "    print(f\"Mask size: {mask.GetSize()}\")\n",
-    "\n",
-    "    # Set voxel value to 1 at each landmark\n",
-    "    for i in range(1, 6):\n",
-    "        landmark_n = 'Landmark' + str(i)\n",
-    "        observer = 'Average' # Average, Amy, Katie, etc\n",
-    "        x = round(df[landmark_n][observer]['X'][img_path])\n",
-    "        y = round(df[landmark_n][observer]['Y'][img_path])\n",
-    "        z = round(df[landmark_n][observer]['Z'][img_path])\n",
-    "        landmark = (x, y, z)\n",
-    "\n",
-    "        print(f\"Landmark {i}: {landmark}\")\n",
-    "        mask.SetPixel(landmark, 1) # Set pixel value to 1\n",
+    "    # Apply pre-processing to image and mask\n",
+    "    print(\"-----Pre-processing image-----\")\n",
+    "    image_post_ = PreProcessing().resample(image)\n",
+    "    image_post = PreProcessing().crop(image_post_, (256, 256, 256))\n",
+    "    print(\"-----Pre-processing mask-----\")\n",
     "    \n",
-    "    # Apply a Binary Dilation filter to make single voxels become spheres\n",
-    "    dilate_filter = sitk.BinaryDilateImageFilter()\n",
-    "    dilate_filter.SetKernelRadius(3)\n",
-    "    dilate_filter.SetKernelType(sitk.sitkBall)\n",
-    "    dilate_filter.SetForegroundValue(1)\n",
+    "    image_mask_post_ = PreProcessing().resample(image_mask)\n",
+    "    image_mask_post = PreProcessing().crop(image_mask_post_, (256, 256, 256))\n",
     "\n",
-    "    # Get all label values, assuming all non zero values are label\n",
-    "    np_arr_view = sitk.GetArrayViewFromImage(mask)\n",
-    "    unique_values = set(np_arr_view[np_arr_view!=0])\n",
-    "    for label in unique_values:\n",
-    "        dilated_mask = dilate_filter.Execute(mask)\n",
+    "    sitk.WriteImage(image_post, os.path.join(image_dir, \"post/imag\", image_name[:-4] + \"_res.nii\"))\n",
+    "    sitk.WriteImage(image_mask_post, os.path.join(image_dir, \"post/mask\", image_name[:-4] + \"_mask_res.nii\"))\n",
     "\n",
-    "    # Save image\n",
-    "    sitk.WriteImage(dilated_mask, os.path.join(img_dir, \"masks\", img_path[:-4] + \"_mask.nii\"))\n",
-    "\n",
-    "    print(\"\")\n",
-    "\n"
+    "    print(\"\")"
    ]
   }
  ],
