Split data into train and validation

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,22 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import SimpleITK as sitk\n",
     "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train created with shape (10, 256, 256, 256)\n"
+     ]
+    }
+   ],
    "source": [
     "#### Converting pre-processed images to NumPy arrays\n",
     "\n",
@@ -27,24 +34,37 @@
     "             if image_name.endswith('.nii')]\n",
     "\n",
     "# Convert sitk images to arrays\n",
-    "image_arrays = []\n",
+    "image_arrays_ = []\n",
     "for image_path in image_paths:\n",
     "    image = sitk.ReadImage(image_path)\n",
     "    image_array = sitk.GetArrayFromImage(image)\n",
-    "    image_arrays.append(image_array)\n",
-    "    print(f\"Image array created for {image_path[28:]}\")\n",
+    "    image_arrays_.append(image_array)\n",
     "\n",
     "# Convert the list of image arrays to a single NumPy array\n",
     "# Make sure that all the images have the same dimensions before converting them to a NumPy array.\n",
-    "x_train = np.array(image_arrays)\n",
-    "print(f\"x_train created with shape {x_train.shape}\")"
+    "image_arrays = np.array(image_arrays_)\n",
+    "\n",
+    "subarrays = np.split(image_arrays,[1])\n",
+    "x_test = subarrays[0][0]  # Extract the first array\n",
+    "x_train = subarrays[1]  # Extract the remaining nine arrays\n",
+    "\n",
+    "print(f\"x_train created with shape {x_train.shape}\")\n",
+    "print(f\"x_test created with shape {x_test.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_train created with shape (10, 256, 256, 256)\n"
+     ]
+    }
+   ],
    "source": [
     "#### Converting pre-processed masks to NumPy arrays\n",
     "\n",
@@ -54,17 +74,22 @@
     "             if mask_name.endswith('.nii')]\n",
     "\n",
     "# Convert sitk images to arrays\n",
-    "mask_arrays = []\n",
+    "mask_arrays_ = []\n",
     "for mask_path in mask_paths:\n",
     "    mask = sitk.ReadImage(mask_path)\n",
     "    mask_array = sitk.GetArrayFromImage(image)\n",
-    "    mask_arrays.append(mask_array)\n",
-    "    print(f\"Image array created for {mask_path[28:]}\")\n",
+    "    mask_arrays_.append(mask_array)\n",
     "\n",
     "# Convert the list of image arrays to a single NumPy array\n",
     "# Make sure that all the images have the same dimensions before converting them to a NumPy array.\n",
-    "y_train = np.array(mask_arrays)\n",
-    "print(f\"y_train created with shape {y_train.shape}\")"
+    "image_arrays = np.array(image_arrays_)\n",
+    "\n",
+    "subarrays = np.split(image_arrays,[1])\n",
+    "y_test = subarrays[0][0]  # Extract the first array\n",
+    "y_train = subarrays[1]  # Extract the remaining nine arrays\n",
+    "\n",
+    "print(f\"y_train created with shape {y_train.shape}\")\n",
+    "print(f\"y_test created with shape {y_test.shape}\")"
    ]
   },
   {
@@ -76,8 +101,8 @@
     "from keras import backend as K\n",
     "from resnet3d import Resnet3DBuilder # pip install git+https://github.com/JihongJu/keras-resnet3d.git\n",
     "\n",
-    "bchs = 4\n",
-    "epch = 150\n",
+    "bchs = 1\n",
+    "epch = 75\n",
     "file = 'simple_model'\n",
     "\n",
     "ir = x_train.shape[1]\n",
@@ -92,7 +117,7 @@
     "    # x_test = x_test.reshape(x_test.shape[0], ir, ic, ih, 1)\n",
     "    input_shape = (ir, ic, ih, 1)\n",
     "\n",
-    "nb_classes = y_train.shape[1] # negative number sets regression\n",
+    "nb_classes = y_train.shape[1] # negative number sets regression {(?) gives me error}\n",
     "    \n",
     "model = Resnet3DBuilder.build_resnet_50(input_shape, nb_classes)\n",
     "model.compile(optimizer = 'adam',\n",
@@ -100,17 +125,18 @@
     "              metrics = ['mae'])\n",
     "\n",
     "trainstarttime = datetime.datetime.today()\n",
-    "print(\"Train start time\" + str(trainstarttime))\n",
+    "print(\"Train start time: \" + str(trainstarttime))\n",
     "\n",
     "history = model.fit(x_train, y_train,\n",
     "            batch_size = bchs,\n",
     "            epochs = epch,\n",
-    "            verbose = 1) # validation_data = (x_test, y_test)\n",
+    "            verbose = 1,\n",
+    "            validation_data = (x_test, y_test))\n",
     "\n",
     "trainfinishtime = datetime.datetime.today()\n",
-    "print(\"Train finish time\" + str(trainfinishtime))\n",
+    "print(\"Train finish time: \" + str(trainfinishtime))\n",
     "ttime = str(trainfinishtime - trainstarttime)\n",
-    "print(\"training time\" + ttime)\n",
+    "print(\"training time: \" + ttime)\n",
     "\n",
     "json_string = model.to_json()\n",
     "fj = file + '.json'\n",
