--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "[11 rows x 75 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,8 +554,9 @@
     "image_dir = \"data/train/images\"\n",
     "landmarks_path = \"data/train/landmarks.xls\"\n",
     "\n",
+    "# Loop through every image in \"orig/imag\"\n",
     "image_names = [image_name for image_name in sorted(os.listdir(os.path.join(image_dir, \"orig/imag\")))\n",
-    "               if os.path.isfile(os.path.join(image_dir, \"orig/imag\", image_name)) and image_name.endswith('.nii')]\n",
+    "               if image_name.endswith('.nii')]\n",
     "for image_name in image_names:\n",
     "\n",
     "    print(f\"Image {image_name}:\")\n",
