Save train and test npy arrays

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_train created with shape (10, 256, 256, 256)\n"
+      "x_train created with shape (8, 256, 256, 256)\n",
+      "x_test created with shape (2, 256, 256, 256)\n"
      ]
     }
    ],
@@ -44,24 +45,28 @@
     "# Make sure that all the images have the same dimensions before converting them to a NumPy array.\n",
     "image_arrays = np.array(image_arrays_)\n",
     "\n",
-    "subarrays = np.split(image_arrays,[1])\n",
-    "x_test = subarrays[0][0]  # Extract the first array\n",
-    "x_train = subarrays[1]  # Extract the remaining nine arrays\n",
+    "subarrays = np.split(image_arrays, [8])\n",
+    "x_train = subarrays[0]\n",
+    "x_test = subarrays[1]\n",
     "\n",
     "print(f\"x_train created with shape {x_train.shape}\")\n",
-    "print(f\"x_test created with shape {x_test.shape}\")"
+    "print(f\"x_test created with shape {x_test.shape}\")\n",
+    "\n",
+    "np.save(\"data/train/x_train.npy\", x_train)\n",
+    "np.save(\"data/train/x_test.npy\", x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y_train created with shape (10, 256, 256, 256)\n"
+      "y_train created with shape (8, 256, 256, 256)\n",
+      "y_test created with shape (2, 256, 256, 256)\n"
      ]
     }
    ],
@@ -84,12 +89,15 @@
     "# Make sure that all the images have the same dimensions before converting them to a NumPy array.\n",
     "image_arrays = np.array(image_arrays_)\n",
     "\n",
-    "subarrays = np.split(image_arrays,[1])\n",
-    "y_test = subarrays[0][0]  # Extract the first array\n",
-    "y_train = subarrays[1]  # Extract the remaining nine arrays\n",
+    "subarrays = np.split(image_arrays, [8])\n",
+    "y_train = subarrays[0]\n",
+    "y_test = subarrays[1]\n",
     "\n",
     "print(f\"y_train created with shape {y_train.shape}\")\n",
-    "print(f\"y_test created with shape {y_test.shape}\")"
+    "print(f\"y_test created with shape {y_test.shape}\")\n",
+    "\n",
+    "np.save(\"data/train/y_train.npy\", y_train)\n",
+    "np.save(\"data/train/y_test.npy\", y_test)"
    ]
   },
   {
@@ -103,18 +111,17 @@
     "\n",
     "bchs = 1\n",
     "epch = 75\n",
-    "file = 'simple_model'\n",
     "\n",
     "ir = x_train.shape[1]\n",
     "ic = x_train.shape[2]\n",
     "ih = x_train.shape[3]\n",
     "if K.image_data_format() == 'channels_first':\n",
     "    x_train = x_train.reshape(x_train.shape[0], 1, ir, ic, ih)\n",
-    "    # x_test = x_test.reshape(x_test.shape[0], 1, ir, ic, ih)\n",
+    "    x_test = x_test.reshape(x_test.shape[0], 1, ir, ic, ih)\n",
     "    input_shape = (1, ir, ic, ih)\n",
     "else:\n",
     "    x_train = x_train.reshape(x_train.shape[0], ir, ic, ih, 1)\n",
-    "    # x_test = x_test.reshape(x_test.shape[0], ir, ic, ih, 1)\n",
+    "    x_test = x_test.reshape(x_test.shape[0], ir, ic, ih, 1)\n",
     "    input_shape = (ir, ic, ih, 1)\n",
     "\n",
     "nb_classes = y_train.shape[1] # negative number sets regression {(?) gives me error}\n",
@@ -125,6 +132,7 @@
     "              metrics = ['mae'])\n",
     "\n",
     "trainstarttime = datetime.datetime.today()\n",
+    "print(\"\")\n",
     "print(\"Train start time: \" + str(trainstarttime))\n",
     "\n",
     "history = model.fit(x_train, y_train,\n",
@@ -136,13 +144,25 @@
     "trainfinishtime = datetime.datetime.today()\n",
     "print(\"Train finish time: \" + str(trainfinishtime))\n",
     "ttime = str(trainfinishtime - trainstarttime)\n",
-    "print(\"training time: \" + ttime)\n",
+    "print(\"Training time: \" + ttime)\n",
+    "print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = 'data/train/models/simple_model'\n",
     "\n",
     "json_string = model.to_json()\n",
     "fj = file + '.json'\n",
     "fh = file + '.h5'\n",
     "open(fj, 'w').write(json_string)\n",
-    "model.save_weights(fh)"
+    "model.save_weights(fh)\n",
+    "\n",
+    "print(\"Model saved.\")"
    ]
   }
  ],
