--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -8,12 +8,13 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import SimpleITK as sitk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +398,7 @@
        "[11 rows x 75 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +574,6 @@
     "    image_post_ = PreProcessing().resample(image)\n",
     "    image_post = PreProcessing().crop(image_post_, (256, 256, 256))\n",
     "    print(\"-----Pre-processing mask-----\")\n",
-    "    \n",
     "    image_mask_post_ = PreProcessing().resample(image_mask)\n",
     "    image_mask_post = PreProcessing().crop(image_mask_post_, (256, 256, 256))\n",
     "\n",
@@ -581,6 +581,93 @@
     "    sitk.WriteImage(image_mask_post, os.path.join(image_dir, \"post/mask\", image_name[:-4] + \"_mask_res.nii\"))\n",
     "\n",
     "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train created with shape (8, 256, 256, 256)\n",
+      "x_test created with shape (2, 256, 256, 256)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### Converting pre-processed images to NumPy arrays\n",
+    "\n",
+    "# List full paths of all files in the directory\n",
+    "image_paths = [os.path.join(image_dir, \"post/imag\", image_name) for image_name in sorted(os.listdir(os.path.join(image_dir, \"post/imag\"))) \n",
+    "             if image_name.endswith('.nii')]\n",
+    "\n",
+    "# Convert sitk images to arrays\n",
+    "image_arrays_ = []\n",
+    "for image_path in image_paths:\n",
+    "    image = sitk.ReadImage(image_path)\n",
+    "    image_array = sitk.GetArrayFromImage(image)\n",
+    "    image_arrays_.append(image_array)\n",
+    "\n",
+    "# Convert the list of image arrays to a single NumPy array\n",
+    "# Make sure that all the images have the same dimensions before converting them to a NumPy array.\n",
+    "image_arrays = np.array(image_arrays_)\n",
+    "\n",
+    "subarrays = np.split(image_arrays, [8])\n",
+    "x_train = subarrays[0]\n",
+    "x_test = subarrays[1]\n",
+    "\n",
+    "print(f\"x_train created with shape {x_train.shape}\")\n",
+    "print(f\"x_test created with shape {x_test.shape}\")\n",
+    "\n",
+    "np.save(\"data/train/x_train.npy\", x_train)\n",
+    "np.save(\"data/train/x_test.npy\", x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_train created with shape (8, 256, 256, 256)\n",
+      "y_test created with shape (2, 256, 256, 256)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### Converting pre-processed masks to NumPy arrays\n",
+    "\n",
+    "# List full paths of all files in the directory\n",
+    "image_dir = \"data/train/images\"\n",
+    "mask_paths = [os.path.join(image_dir, \"post/mask\", mask_name) for mask_name in sorted(os.listdir(os.path.join(image_dir, \"post/mask\"))) \n",
+    "             if mask_name.endswith('.nii')]\n",
+    "\n",
+    "# Convert sitk images to arrays\n",
+    "mask_arrays_ = []\n",
+    "for mask_path in mask_paths:\n",
+    "    mask = sitk.ReadImage(mask_path)\n",
+    "    mask_array = sitk.GetArrayFromImage(image)\n",
+    "    mask_arrays_.append(mask_array)\n",
+    "\n",
+    "# Convert the list of image arrays to a single NumPy array\n",
+    "# Make sure that all the images have the same dimensions before converting them to a NumPy array.\n",
+    "image_arrays = np.array(image_arrays_)\n",
+    "\n",
+    "subarrays = np.split(image_arrays, [8])\n",
+    "y_train = subarrays[0]\n",
+    "y_test = subarrays[1]\n",
+    "\n",
+    "print(f\"y_train created with shape {y_train.shape}\")\n",
+    "print(f\"y_test created with shape {y_test.shape}\")\n",
+    "\n",
+    "np.save(\"data/train/y_train.npy\", y_train)\n",
+    "np.save(\"data/train/y_test.npy\", y_test)"
    ]
   }
  ],
