Completed first try of resnet model

--- a/train_resnet.ipynb
+++ b/train_resnet.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import numpy as np\n",
-    "import SimpleITK as sitk\n",
     "import datetime"
    ]
   },
@@ -19,9 +17,9 @@
    "outputs": [],
    "source": [
     "x_train = np.load('data/train/x_train.npy')\n",
-    "x_test = np.load('data/train/x_test.npy')\n",
+    "# x_test = np.load('data/train/x_test.npy')\n",
     "y_train = np.load('data/train/y_train.npy')\n",
-    "y_test = np.load('data/train/y_test.npy')"
+    "# y_test = np.load('data/train/y_test.npy')"
    ]
   },
   {
@@ -31,24 +29,26 @@
    "outputs": [],
    "source": [
     "from keras import backend as K\n",
-    "from resnet3d import Resnet3DBuilder # pip install git+https://github.com/JihongJu/keras-resnet3d.git\n",
+    "from resnet3d import Resnet3DBuilder \n",
+    "# pip install git+https://github.com/JihongJu/keras-resnet3d.git\n",
     "\n",
     "bchs = 1\n",
     "epch = 75\n",
     "\n",
-    "ir = x_train.shape[1]\n",
-    "ic = x_train.shape[2]\n",
-    "ih = x_train.shape[3]\n",
+    "ir = x_train.shape[1] # rows\n",
+    "ic = x_train.shape[2] # cols\n",
+    "ih = x_train.shape[3] # slices\n",
+    "\n",
     "if K.image_data_format() == 'channels_first':\n",
     "    x_train = x_train.reshape(x_train.shape[0], 1, ir, ic, ih)\n",
-    "    x_test = x_test.reshape(x_test.shape[0], 1, ir, ic, ih)\n",
+    "    # x_test = x_test.reshape(x_test.shape[0], 1, ir, ic, ih)\n",
     "    input_shape = (1, ir, ic, ih)\n",
     "else:\n",
     "    x_train = x_train.reshape(x_train.shape[0], ir, ic, ih, 1)\n",
-    "    x_test = x_test.reshape(x_test.shape[0], ir, ic, ih, 1)\n",
+    "    # x_test = x_test.reshape(x_test.shape[0], ir, ic, ih, 1)\n",
     "    input_shape = (ir, ic, ih, 1)\n",
     "\n",
-    "nb_classes = y_train.shape[1] # negative number sets regression {(?) gives me error}\n",
+    "nb_classes = y_train.shape[1]\n",
     "    \n",
     "model = Resnet3DBuilder.build_resnet_50(input_shape, nb_classes)\n",
     "model.compile(optimizer = 'adam',\n",
@@ -62,8 +62,8 @@
     "history = model.fit(x_train, y_train,\n",
     "            batch_size = bchs,\n",
     "            epochs = epch,\n",
-    "            verbose = 1,\n",
-    "            validation_data = (x_test, y_test))\n",
+    "            verbose = 1)\n",
+    "            # validation_data = (x_test, y_test))\n",
     "\n",
     "trainfinishtime = datetime.datetime.today()\n",
     "print(\"Train finish time: \" + str(trainfinishtime))\n",
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = 'data/train/models/simple_resnet_model'\n",
+    "file = 'data/train/models/resnet_model'\n",
     "\n",
     "json_string = model.to_json()\n",
     "fj = file + '.json'\n",
