--- a/image_dataset.ipynb
+++ b/image_dataset.ipynb
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "##### Visualise dataset characteristics\n",
+    "### Visualise dataset characteristics\n",
     "image_dir = \"data/train/images\"\n",
     "\n",
     "image_paths = [os.path.join(image_dir, \"orig/imag\", image_name) \n",
@@ -122,7 +122,7 @@
     }
    ],
    "source": [
-    "##### Find global max and min intensity values\n",
+    "### Find global max and min intensity values\n",
     "\n",
     "global_min = 0\n",
     "global_max = 0\n",
