--- a/5_post-proc.ipynb
+++ b/5_post-proc.ipynb
@@ -18,7 +18,9 @@
     "loss_data = np.load(f'data/arrays/loss_data_{joint}.npz')\n",
     "image_dir = f\"data/images/4_pre-proc3/{joint}\"\n",
     "landmarks_array = np.load(f\"data/arrays/y_{ds}_{joint}.npy\")\n",
-    "landmarks_pred_array = np.load(f\"data/arrays/y_pred_{ds}_{joint}.npy\")"
+    "landmarks_pred_array = np.load(f\"data/arrays/y_pred_{ds}_{joint}.npy\")\n",
+    "\n",
+    "vis = False"
    ]
   },
   {
